--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-.bg-gradient{
-    height: 100%;
-    width: 100%;
-    background-image: -moz-linear-gradient(45deg,red,green);
+body{
+    background-image: linear-gradient(45deg,red,green);
 }
