--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,3 @@
 body{
-    background-image: -moz-linear-gradient(45deg,#2a2b3c,#12112a);
+    background-image: linear-gradient(45deg,#2a2b3c,#b9b8cc);
 } 
