--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 body{
     background-image: linear-gradient(45deg,#2a2b3c,#b9b8cc);
+    font-family: 'Archivo Black' ,sans-serif;
 } 
