--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
 body{
-    background-image: linear-gradient(45deg,#2a2b3c,#b9b8cc);
+    background-image: linear-gradient(45deg,#02386E,#000b18);
     font-family: 'Archivo Black' ,sans-serif;
 } 
