--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,5 @@
 body{
     background-image: linear-gradient(0deg,#02386E,#000b18);
     font-family: 'Archivo Black' ,sans-serif;
+    background-size: auto;
 } 
