--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,6 @@ body{
     background-image: linear-gradient(0deg,#02386E,#000b18);
     font-family: 'Archivo Black' ,sans-serif;
     background-size: 100%;
+    background-repeat: no-repeat;
+    min-height: 100vh;
 } 
